crates/reinhardt-core/crates/macros/tests/ui/model/fail/missing_app_label.stderr
error: expected attribute arguments in parentheses: #[field(...)]
  --> tests/ui/model/fail/missing_app_label.rs:12:4
   |
12 |     #[field]
   |       ^^^^^
